Fix aspect ratio (even if it means bottom/tops are slightly cut off)

--- a/PublicDomainPulp/snippets/home.css
+++ b/PublicDomainPulp/snippets/home.css
@@ -297,7 +297,8 @@ code, pre {
 }
 .pulpcard > img {
   width: 100%;
-  aspect-ratio: 16 / 9;
+  aspect-ratio: 1376 / 768;
+  object-fit: cover;
 }
 .pulpcard > div {
   display: flex;
